# cslibs_utils

./: CMakeLists.txt  README.md  package.xml
include/cslibs_utils/: CircleEstimator.h
include/utils_general/: CircleEstimator.h  MathHelper.h  Stopwatch.h
src/: CircleEstimator.cpp  ConfigFileReader.cpp  CvContourManipulator.cpp  CvMathHelper.cpp  EggTimer.cpp  EigenTools.cpp  Graphics.cpp  LaserTo3DTransformation.cpp  Line2d.cpp  Line2dSegment.cpp  LogCollector.cpp  LowPassFilter.cpp  MathHelper.cpp  Misc.cpp  Path.cpp  RamaxxException.cpp  Stopwatch.cpp  Strings.cpp  runningstat.cpp
