<?xml version="1.0"?>
<package>
  <name>utils_general</name>
  <version>0.0.1</version>
  <description>The utils_general package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>tf</run_depend>
</package>
