<?xml version="1.0"?>
<package>
  <name>cslibs_utils</name>
  <version>1.0.0</version>
  <description>This package contains general utility classes</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
</package>
